# vibroacoustic_demos

./: .gitignore  LICENSE  README.md  beam_modes_demo.html  compute_psd_from_complex_response.py  cylinder_modes_demo.html  gui_app.py  gui_file_dialogs.py  gui_interactive.py  gui_macos.py  gui_plotting.py  gui_streamlit.py  gui_tk.py  isolation_demo.html  mdof_demo.html  piston_radiation_demo.html  plate_modes_demo.html  psd_grms_demo.html  pyproject.toml  requirements.txt  traveling_wave_demo.html
examples/: generate_synthetic_csv.py  generate_synthetic_data.py
force_recon/: __init__.py  conditioning.py  export_nastran.py  flight.py  flight_io.py  frf_io.py  interpolate.py  inverse.py  inversion.py  io_flight.py  io_transfer.py  pipeline.py  response_spectra.py  simply_supported_plate.py  units.py
matlab/: compute_psd_from_complex_response_csv.m  reconstruct_forces_from_flight_csv.m  reconstruct_forces_from_flight_data.m  run_force_reconstruction_flight_example.m  simply_supported_plate_force_reconstruction_demo.m
tests/: test_export_nastran.py  test_flight_io_mat.py  test_integration_csv.py  test_inverse.py  test_inversion.py  test_pipeline_plate_case.py  test_pipeline_synthetic.py  test_response_spectra.py
