[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "force-recon"
version = "0.1.0"
description = "Reconstruct interface forces from flight accelerations and NASTRAN mobility FRFs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
gui = ["matplotlib>=3.7", "streamlit>=1.33"]
dev = ["pytest>=7.0", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["force_recon*"]
